# notion-objects

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
notion_objects/: __init__.py  attributes.py  database.py  encode.py  objects.py  properties.py  rich_text.py  values.py
tests/: test_database.py  test_objects.py  test_rich_text.py
tests/integration/: conftest.py  test_basic_properties.py  test_query.py
