[metadata]
name = notion-objects
version = attr: notion_objects.__version__
url = https://github.com/thrau/notion-objects
author = Thomas Rausch
author_email = thomas@thrau.at
description = A python library to work with objects retrieved from the notion API
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:

install_requires =
    python-dateutil>=2.8
    notion-client>=1.0

[options.extras_require]
# developer/testing dependencies
test =
    coverage[toml]>=5.0
    pytest-cov>=2.7.1
    coveralls
    black>=22.1
    isort>=5.10
    pytest>=7.0

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md
